Add analysis outputs and results
- Include all generated charts (PNG files) showing strategy performance
- Add portfolio metrics CSV and formatted text files
- Add comprehensive results CSV with detailed performance data
- Update .gitignore to include output files for GitHub visibility
- Users can now see analysis results without running the code

--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,10 @@ wheels/
 .DS_Store
 Thumbs.db
 
-# Data files (exclude output files but keep input data)
-outputs/
+# Data files (keep output files for GitHub but exclude other data)
 *.pkl
 *.pickle
 
 # Keep these data files for the project
 !covered_calls_analysis/data/*.csv
+!covered_calls_analysis/outputs/
